# cpga

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile.in  README.md  generate_commands.sh  perf.data
include/cpga/: atoms.hpp  common.hpp  core.hpp  models.hpp  operators.hpp
include/cpga/cluster/: cluster_runner.hpp  master_node.hpp  reporter_node.hpp  worker_node.hpp
include/cpga/core/: base_cluster_driver.hpp  base_cluster_state.hpp  base_operator.hpp  base_single_machine_driver.hpp  base_state.hpp  data.hpp  message_bus.hpp
include/cpga/examples/components_fault/: components_fault.hpp  components_fault_defs.hpp  svm_crossover.hpp  svm_fitness_evaluation.hpp  svm_initialization.hpp  svm_mutation.hpp
include/cpga/examples/onemax/: bitstring_mutation.hpp  onemax_fitness_evaluation.hpp
include/cpga/models/: global_model.hpp  grid_model.hpp  island_model.hpp  sequential_model.hpp
include/cpga/models/distributed/: global_model_cluster.hpp  grid_model_cluster.hpp  island_model_cluster.hpp
include/cpga/models/single_machine/: global_model_single_machine.hpp  grid_model_single_machine.hpp  island_model_single_machine.hpp
include/cpga/operators/: average_fitness_global_termination_check.hpp  best_individual_elitism.hpp  best_migration.hpp  random_migration.hpp  ring_best_migration.hpp  ring_random_migration.hpp  roulette_wheel_parent_selection.hpp  roulette_wheel_survival_selection.hpp  sequence_individual_crossover.hpp  sequence_individual_initialization.hpp  star_random_migration.hpp
include/cpga/utilities/: csv_reader.hpp  finite_state_machine.hpp  population_sorter.hpp  reporter.hpp
include/genetic-actor/: individual.hpp
ipython/: final_year_project.ipynb
src/: CMakeLists.txt  atoms.hpp  base_cluster_driver.cpp  base_cluster_state.cpp  base_state.cpp  bitstring_mutation.cpp  cluster.hpp  common.cpp  common.hpp  components_fault_defs.cpp  constants.hpp  core.cpp  core.hpp  data.cpp  main.cpp  master_node.cpp  message_bus.cpp  models.hpp  onemax_fitness_evaluation.cpp  operators.hpp  reporter.cpp  reporter.hpp  svm.cpp  svm_crossover.cpp  svm_fitness_evaluation.cpp  svm_initialization.cpp  svm_mutation.cpp  worker_node.cpp
src/cluster/: cluster_runner.hpp  global_model_cluster.hpp  grid_model_cluster.hpp  island_model_cluster.hpp  master_node.cpp  master_node.hpp  reporter_node.hpp  worker_node.cpp  worker_node.hpp
src/core/: base_cluster_driver.cpp  base_cluster_driver.hpp  base_cluster_state.cpp  base_cluster_state.hpp  base_driver.hpp  base_operator.cpp  base_operator.hpp  base_single_machine_driver.hpp  base_state.cpp  base_state.hpp  data.cpp  data.hpp  defaults.hpp  message_bus.cpp  message_bus.h  message_bus.hpp  single_machine_runner.hpp
src/example/: bitstring_mutation.cpp  definitions.hpp  onemax_fitness_evaluation.cpp  onemax_fitness_evaluation.hpp  sample_migration.cpp
src/example/components_fault/: components_fault.hpp  components_fault_defs.cpp  components_fault_defs.hpp  svm_crossover.cpp  svm_crossover.hpp  svm_fitness_evaluation.cpp  svm_fitness_evaluation.hpp  svm_initialization.cpp  svm_initialization.hpp  svm_mutation.cpp  svm_mutation.hpp
src/example/onemax/: bitstring_mutation.cpp  bitstring_mutation.hpp  onemax.hpp  onemax_defs.hpp  onemax_fitness_evaluation.cpp  onemax_fitness_evaluation.hpp
src/examples/components_fault/: components_fault_defs.hpp  svm_crossover.cpp  svm_crossover.hpp  svm_fitness_evaluation.cpp  svm_fitness_evaluation.hpp  svm_initialization.cpp  svm_initialization.hpp  svm_mutation.cpp
src/examples/onemax/: bitstring_mutation.cpp  onemax_fitness_evaluation.cpp  onemax_fitness_evaluation.hpp
src/io/: node.cpp  node.hpp
src/models/: global_model.hpp  grid_model.hpp  island_model.hpp  sequential_model.hpp
src/models/distributed/: global_model_cluster.hpp  grid_model_cluster.hpp  island_model_cluster.hpp
src/models/single_machine/: global_model_driver.hpp  global_model_single_machine.hpp  grid_model_driver.hpp  grid_model_single_machine.hpp  island_driver.hpp  island_model_single_machine.hpp
src/operators/: average_fitness_global_termination_check.hpp  best_individual_elitism.hpp  best_migration.hpp  random_migration.hpp  ring_best_migration.hpp  ring_random_migration.hpp  roulette_wheel_parent_selection.hpp  roulette_wheel_survival_selection.hpp  sequence_individual_crossover.hpp  sequence_individual_factory.hpp  sequence_individual_initialization.hpp  star_random_migration.hpp
src/utilities/: csv_reader.h  csv_reader.hpp  finite_state_machine.hpp  population_sorter.hpp  reporter.cpp  reporter.hpp
test/: CMakeLists.txt  average_fitness_global_termination_check_test.cpp  best_individual_elitism_test.cpp  bitstring_mutation_test.cpp  common_test.cpp  main_test.cpp  onemax_fitness_evaluation_test.cpp  population_sorter_test.cpp  ring_best_migration_test.cpp  sequence_individual_crossover_test.cpp  sequence_individual_initialization_test.cpp  test_main.cpp
test/helpers/: population_helper.cpp  population_helper.hpp  shared_config_builder.cpp  shared_config_builder.hpp
